# stackage-trustee

./: README.md  stackage-trustee.cabal
app/: Index.hs  Log.hs  Main.hs  RevDeps.hs
